--- a/package.json
+++ b/package.json
@@ -14,9 +14,16 @@
     "@emotion/styled": "^11.11.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/material": "^5.15.21",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.1",
+    "@mui/x-date-pickers": "^7.10.0",
+    "@mui/x-date-pickers-pro": "^7.10.0",
+    "@mui/x-license-pro": "^6.10.2",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0"
   },
