--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^5.16.4",
     "@mui/lab": "^5.0.0-alpha.172",
-    "@mui/material": "^5.16.1",
-    "@mui/x-date-pickers": "^7.10.0",
+    "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^7.11.0",
     "@mui/x-date-pickers-pro": "^7.10.0",
     "@mui/x-license-pro": "^6.10.2",
     "axios": "^1.7.2",
